--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "react-native-worklets-core": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
