--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jabbb",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,15 +14,20 @@
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.5",
     "expo-gl": "~13.0.1",
     "expo-gl-cpp": "^11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "13.9.0",
-    "react-native-worklets-core": "^0.2.4"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
