--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "expo-router": "^2.0.0",
     "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
+    "moti": "^0.27.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "expo-linear-gradient": "~12.3.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@shopify/flash-list": "1.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
