Add EAS configuration and update dependencies

--- a/app.json
+++ b/app.json
@@ -22,13 +22,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jabbb.jabbb"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "experiments": {
       "tsconfigPaths": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1083193e-5144-4b6e-bc6b-e7a4f220c115"
+      }
     }
   }
 }
