--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@shopify/flash-list": "1.4.3",
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs": "^4.14.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
@@ -18,6 +21,7 @@
     "expo-file-system": "~15.4.5",
     "expo-gl": "~13.0.1",
     "expo-gl-cpp": "^11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-screen-orientation": "~6.0.6",
@@ -30,14 +34,21 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "expo-linear-gradient": "~12.3.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@shopify/flash-list": "1.4.3"
+    "jest-expo": "~49.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.11",
     "@types/react": "~18.2.14",
+    "jest": "^29.7.0",
     "typescript": "^5.1.3"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
