--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "postinstall": "patch-package",
     "test": "jest"
   },
   "dependencies": {
@@ -26,15 +27,16 @@
     "expo-router": "^2.0.0",
     "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
+    "jest-expo": "~49.0.0",
     "moti": "^0.27.2",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "jest-expo": "~49.0.0"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
